fix: fix text-align for modal

--- a/hangman/src/js/view/main/mainView.css
+++ b/hangman/src/js/view/main/mainView.css
@@ -67,6 +67,7 @@ body {
   z-index: 5;
   border-radius: 30px;
   animation: popup 0.5s linear;
+  text-align: center;
   @media (max-width: 1000px) {
     inset: 20% 10%;
   }
